# keypeek

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: evaluate-nix.yml  main.yml  workflow.yml
proto/zmk/: behaviors.proto  core.proto  keymap.proto  meta.proto  studio.proto
src/: connection.rs  device_discovery.rs  key_matrix.rs  keyboard.rs  keyboard_info.rs  layout_key.rs  main.rs  overlay_window.rs  settings.rs  settings_window.rs  tray.rs  ui_wake.rs
src/keycode_labels/: advanced.rs  keycode_label.rs  layer.rs
src/overlay_window/: connection_flow.rs  settings_sync.rs  state.rs  ui_overlay.rs  ui_settings.rs
src/platform/: eframe_host.rs  mod.rs
src/platform/wayland/: egl.rs  input.rs  mod.rs
src/protocols/: kle_parser.rs  mod.rs  qmk_json_parser.rs  via.rs  vial.rs  zmk.rs  zmk_parser.rs  zmk_rpc.rs  zmk_studio.rs
src/protocols/zmk_proto/: behaviors.rs  core.rs  keymap.rs  meta.rs  mod.rs  studio.rs
src/qmk_keycode_labels/: advanced.rs  basic.rs  constants.rs  keycode_label.rs  layer.rs
src/zmk_keycode_labels/: behavior.rs  hid_usage.rs  keycode_label.rs  mod.rs
