[package]
name = "qmk-layout-helper"
license = "GPL-3.0-only"
description = "QMK layout viewer"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/qmk-layout-helper"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-ini = "0.21.3"
tray-icon = "0.21.3"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
qmk-via-api = { version = "0.6.0" }
hidapi = "2.6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
egui-phosphor = "0.11.0"
egui-file-dialog = "0.12.0"
image = "0.25.9"
lzma-rs = "0.3"
regex = "1.12.3"
serialport = "4"
zmk-studio-api = { path = "../zmk-studio-api", features = ["serial", "ble"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"

